--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cheerio": "^1.0.0-rc.3",
     "config": "^3.1.0",
     "express": "^4.16.2",
     "express-async-errors": "^3.1.1",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.0.2",
     "nodemon": "^1.19.0",
+    "request": "^2.88.0",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.1"
   }
